--- a/SharedTimer/build.gradle
+++ b/SharedTimer/build.gradle
@@ -25,6 +25,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	//Webjars+JS/CSSライブラリ
+	//Lombock関連
+	implementation 'org.webjars:webjars-locator-core'
+	implementation 'org.webjars:sockjs-client:1.0.+'
+	implementation 'org.webjars:stomp-websocket:2.3.+'
+	implementation 'org.webjars:jquery:3.1.+'
+	compileOnly 'org.projectlombok:lombok:1.18.+'
+	annotationProcessor 'org.projectlombok:lombok:1.18.+'
+	//ここまで
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
