--- a/SharedTimer/build.gradle
+++ b/SharedTimer/build.gradle
@@ -27,9 +27,9 @@ dependencies {
 	//Webjars+JS/CSSライブラリ
 	//Lombock関連
 	implementation 'org.webjars:webjars-locator-core'
-	implementation 'org.webjars:sockjs-client:1.0.+'
-	implementation 'org.webjars:stomp-websocket:2.3.+'
-	implementation 'org.webjars:jquery:3.1.+'
+	implementation 'org.webjars:sockjs-client:1.0.2'
+	implementation 'org.webjars:stomp-websocket:2.3.3'
+	implementation 'org.webjars:jquery:3.1.1-1'
 	compileOnly 'org.projectlombok:lombok:1.18.+'
 	annotationProcessor 'org.projectlombok:lombok:1.18.+'
 	//ここまで
